<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:layout_margin="11dp">

    <LinearLayout
        android:id="@+id/locationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/startLocationServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_location_updates"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/stopLocationServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_location_updates"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accelerationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLayout"
        android:layout_marginTop="11dp">
        <Button
            android:id="@+id/startAccelerationServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_accelerometer_updates"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/stopAccelerationServiceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_accelerometer_updates"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelerationLayout"
        android:layout_marginTop="11dp">
        <Button
            android:id="@+id/writeToCSVFileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_file"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/shareFilesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shareFiles"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>